--- a/src/components/landingPage/landingPage.scss
+++ b/src/components/landingPage/landingPage.scss
@@ -423,7 +423,7 @@
     #landing #landing1{ 
         .mission{
             left: 50px;
-            top: 160px;
+            top: 143px;
             h2{
                 font-size:60px;
             }
