--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -19,8 +19,10 @@ body.white-title .mdl-layout .mdl-layout__inner-container .mdl-layout__header{
         color: white;
         position: fixed;
         text-decoration: none;
-        left:20px;
-        top:6px;
+        // left:20px;
+        // top:6px;
+        left: 14px;
+        top: 0px;
     }
     .mdl-layout__drawer-button i{
         z-index: 10;
@@ -102,7 +104,9 @@ body.green-title .mdl-layout .mdl-layout__inner-container{
     }
 }
 body.black-title .mdl-layout .mdl-layout__inner-container{
+    z-index: 100;
     .mdl-layout__header-row{
+        z-index: 100;
         .mdl-layout-title{
             .header-title{
                 color:black;
@@ -110,12 +114,14 @@ body.black-title .mdl-layout .mdl-layout__inner-container{
         }
     }
     .header-title{
-        z-index: 10;
+        z-index: 100;
         color: black;
         position: fixed;
         text-decoration: none;
         left:20px;
         top:6px;
+        // left: 14px;
+        // top: 0px;
     }
     .mdl-layout__drawer-button i{
         z-index: 10;
@@ -159,7 +165,7 @@ body.mixed-title .mdl-layout .mdl-layout__inner-container{
 
 body.white-drawer .mdl-layout .mdl-layout__inner-container{
     .mdl-layout__drawer-button i{
-        z-index: 100;
+        // z-index: 100;
         color: white;
     }
 }
@@ -170,13 +176,13 @@ body.hamburger-mode .mdl-layout .mdl-layout__inner-container {
     // }
    
     .mdl-layout__drawer-button {
-        z-index: 100;
+        // z-index: 100;
         display: inline-block;
         margin-top: 10px;
     }
     .mdl-layout__header .mdl-navigation__link {
         // -webkit-transform: translate3d(0,0,0);
-        z-index: 100;
+        // z-index: 100;
         display: none;
     }
     .search{
@@ -207,6 +213,7 @@ body .mdl-layout .mdl-layout__inner-container{
        
     }   
     .mdl-navigation__link{
+        // z-index: 100;
         position: relative;
         color: white;
         font-size: 18px;
@@ -215,7 +222,7 @@ body .mdl-layout .mdl-layout__inner-container{
     }
     .mdl-layout__drawer-button{
         color: black;
-        z-index: 4;
+        z-index: 100;
         left: auto;
         right:30px;
         top:15px;
@@ -226,30 +233,31 @@ body .mdl-layout .mdl-layout__inner-container{
         width: 48px;
         border:none;
             i{
+            z-index: 100;
             // color:black;
             color:white;
             font-size: 40px;   
             }
     }
     .mdl-layout__drawer{
-        z-index: 101;
+        // z-index: 1000;
         height: 100vh;
-        // -webkit-transform: translate3d(0,0,0);
-
-
         .mdl-layout-title{
             .header-title{
+                // display: none;
                 position: fixed;
                 font-family: "Quentin";
                 font-size: 50px;
                 text-decoration: none;
-                left:20px;
-                top:6px;
+                left: 14px;
+                top: 0px;
                 // color: black;
             }
         }
     }
+
     .drawer-nav{
+        // z-index: 1000;
         padding-top:80px;
         .mdl-navigation__link{
             position: relative;
@@ -260,6 +268,7 @@ body .mdl-layout .mdl-layout__inner-container{
         }
     }
     .mdl-layout__drawer .mdl-navigation{
+        // z-index: 1000;
         padding-top:70px;
         height: 300vh;
         // color:red;
@@ -304,6 +313,7 @@ body .mdl-layout .mdl-layout__inner-container{
 // PHONE: 0-450
 @media (max-width: 450px) {
     body .mdl-layout .mdl-layout__inner-container {
+        // z-index: 100;
         .mdl-layout__drawer-button{
             z-index: 100;
             display: block;
